--- a/css/style.css
+++ b/css/style.css
@@ -1760,6 +1760,8 @@ img {
 }
 
 .faqs__main-heading {
+  width: 100%;
+  max-width: 540px;
   color: #495567;
   text-align: center;
   font-family: monospace;
@@ -1861,8 +1863,11 @@ img {
     margin: 0 auto;
   }
   .faqs__main-item-box-heading {
+    width: 100%;
+    max-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 32px;
-    margin-left: 100px;
   }
 }
 @media only screen and (max-width: 440px) {
