--- a/css/style.css
+++ b/css/style.css
@@ -1762,6 +1762,7 @@ img {
 .faqs__main-heading {
   width: 100%;
   max-width: 540px;
+  margin: 0 auto;
   color: #495567;
   text-align: center;
   font-family: monospace;
@@ -1862,6 +1863,10 @@ img {
     align-items: center;
     margin: 0 auto;
   }
+  .faqs__main-item-box-item-heading {
+    max-width: 356px;
+    width: 100%;
+  }
   .faqs__main-item-box-heading {
     width: 100%;
     max-width: 350px;
@@ -1879,6 +1884,10 @@ img {
     font-weight: 700;
     line-height: 32px;
     letter-spacing: -1.429px;
+  }
+  .faqs__main-item-box-item-heading {
+    max-width: 219px;
+    width: 100%;
   }
   .faqs__main-item-box-heading {
     color: #495567;
